@@ -1,3 +1,9 @@
+Tue Mar 10 20:03:41 2015  Tanaka Akira  <akr@fsij.org>
+
+	* lib/webrick/server.rb: Invoke setup_shutdown_pipe in start method
+	  instead of listen method.
+	  [ruby-core:68476] [Bug #10956] Reported by Shintaro Kojima.
+
 Tue Mar 10 17:27:27 2015  Koichi Sasada  <ko1@atdot.net>
 
 	* thread.c (thread_join): Fixnum (except TAG_FATAL) and
